--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,3 @@
-server:
-  port: 8888
 spring:
-  datasource:
-    url: jdbc:mysql://1.94.21.181:3306/bank_doc?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8&useSSL=false
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-mybatis-plus:
-  mapper-locations: classpath:mapper/*Mapper.xml
-  type-aliases-package: org.example.model.po
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-
+  profiles:
+    active: dev
